# moniagent

./: .gitignore  AGENTS.md  QWEN.md  docker-compose.yml  inspect_script.py  package-lock.json  test_financial_advice.py  test_financial_advice_simple.py  test_integration.py
backend/: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  env_example.txt  mypy.ini  pyproject.black  pyproject.toml  requirements.txt  ruff.toml  test_results_final.txt
backend/docs/: ACTUAL_AGENT_FLOW.md  AI_AGENT_ANALYSIS.md  AI_AGENT_CURRENT_IMPLEMENTATION.md  AI_AGENT_CURRENT_VS_PLANNED.md  AI_AGENT_QUICK_START.md  AI_AGENT_WORKFLOW.md  ANALYSIS_SUMMARY.md  API_ENDPOINTS.md  ARCHITECTURE.md  AUTH_FLOW_ANALYSIS.md  CATEGORY_LEARNING.md  CONFIRMATION_FLOW_EXAMPLES.md  DEPENDENCY_AUDIT.md  DEVELOPMENT.md  IMPLEMENTATION_SUMMARY.md  MONTHLY_SPENDING_ANALYSIS.md  MONTHLY_SPENDING_CAPABILITY_SUMMARY.md  PHAN_TICH_AI_AGENT_VN.md  PHASE3_TEST_RESULTS.md  PHASE4_COMPLETION_REPORT.md  PHASE4_COMPLETION_SUMMARY.md  PHASE4_TEST_RESULTS.md  SECURITY.md  value_proposition.md
backend/monitoring/: uptime_check.py
backend/src/: BAO_CAO_LANGCHAIN_LANGGRAPH.md  agent_flow.md
backend/src/api/: main.py  validation.py
backend/src/core/: ai_config.py  cache.py  config.py  database.py  langgraph_agent.py  scheduler.py  security.py
backend/src/models/: __init__.py  ai_interaction.py  budget.py  categorization_feedback.py  category.py  chat_session.py  expense.py  expense_categorization_rule.py  expense_category.py  invoice.py  user.py
backend/src/services/: __init__.py  ai_agent_service.py  budget_management_service.py  categorization_service.py  category_learning_service.py  category_service.py  expense_aggregation_service.py  expense_processing_service.py  invoice_service.py  (+2 more)
backend/tests/: conftest.py  test_amount_extraction.py  test_category_learning.py  test_confirmation_flow.py
(+110 files in other folders)
